# production-rag-service

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.old  Makefile  README.md  RUNBOOK.md  SLO.md  docker-compose.override.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: roadmap.yml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  api.py  cache.py  config.py  cost_tracker.py  eval_offline.py  llm_providers.py  logging.py  middleware.py  rag_pipeline.py  schemas.py  simple_api.py  types.py
app/routers/: __init__.py  health.py  metrics.py
app/search/: __init__.py  bm25.py  hybrid.py  reranker.py
app/utils/: __init__.py  resilience.py
data/docs/: .gitkeep
data/eval/: .gitkeep
data/sample/: README.md  ai_fundamentals.txt  machine_learning.txt
eval/: dataset.jsonl
infra/terraform/: main.tf  outputs.tf  variables.tf
scripts/: canary-deploy.sh  deploy.sh  deploy_azure.sh  ingest_docs.py  roll-forward.sh  rollback.sh  seed_issues.py
tests/: __init__.py  test_api.py  test_data_prep.py  test_e2e.py  test_ops.py  test_rag_pipeline.py  test_retrieval.py
tests/data/: test_corpus.jsonl
